5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_1806.log
== TEST (2019-03-24 20:28:31) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = factorial(365)
pn1 = (365-np)
pn2 = factorial(pn1)
pn3 = pn/pn2
pn4 = 1/(365)*np
pn5 = pn3*pn4 - 1
print(round(pn5, 2))
-- OUTPUT:
1.5312102665533514e+29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:28:32) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = factorial(365)
pn1 = (365-np)
pn2 = factorial(pn1)
pn3 = pn/pn2
pn4 = 1/(365)*np
pn5 = pn3*pn4 - 1
print(round(pn5, 2))
-- EXECUTION TIME:
0.126904
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
1.5312102665533514e+29
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
9.489981502234908e+59
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
5.31174863841708e+246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:28:33) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = factorial(365)
pn1 = (365-np)
pn2 = factorial(pn1)
pn3 = pn/pn2
pn4 = 1/(365)*np
pn5 = pn3*pn4 - 1
print(round(pn5, 2))
-- EXECUTION TIME:
0.181155
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
1.5312102665533514e+29
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
9.489981502234908e+59
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
5.31174863841708e+246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:28:34) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = factorial(365)
pn1 = (365-np)
pn2 = factorial(pn1)
pn3 = pn/pn2
pn4 = 1/(365)*np
pn5 = pn3*pn4 - 1
print(round(pn5, 2))
-- OUTPUT:
1.5312102665533514e+29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:30:05) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = factorial(365)
pn1 = (365-np)
pn2 = factorial(pn1)
pn3 = pn/pn2
pn4 = 1/(365)*np
pn5 = 1 - pn3*pn4 
print(round(pn5, 2))
-- OUTPUT:
-1.5312102665533514e+29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:27:28) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2/100
print(pn3)
-- ERROR:
File "XXXX", line 4
    pn1 = pn*(1/(365**np))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:27:58) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2/100
print(pn3)
-- OUTPUT:
0.0016702478883806448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:28:26) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2/100
print(round(pn3, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:28:39) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2
print(round(pn3, 2))
-- EXECUTION TIME:
0.194817
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:28:39) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2
print(round(pn3, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:28:52) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2*100
print(round(pn3, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:28:57) 
-- CODE:
from math import *
np = int(input("Numero de pessoas:"))
pn = (factorial(365)/(factorial(365 - np)))
pn1 = pn*(1/(365**np))
pn2 = 1-pn1
pn3 = pn2*100
print(round(pn3, 2))
-- EXECUTION TIME:
0.162125
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
